# poked

./: README.md  pyproject.toml
.github/workflows/: ci.yaml
poked/: __init__.py  cache.py  client.py  colors.py  queries.py  sprites.py  test_cache.py  test_client.py
pokedex/: __main__.py  cache.py  client.py  queries.py
tests/: test_cache.py  test_pokedex.py  test_sprites.py
