[tool.poetry]
name = "poked"
version = "0.4.0"
description = "Play with Pokemon Data using Pandas"
authors = ["Kyle Kelley <rgbkrk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
gql = "^3.4"
appdirs = "^1.4"
aiohttp = "^3.8"
pandas = "^1.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
gql = "^3.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
